[package]
name = "bouncer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "*"
tokio = { version = "1", features = [ "full" ] }
axum = { version = "0.7.7", features = ["macros"] }
serde = { version = "1.0.210", features = ["derive"] }
minijinja = "2.3.1"

[dependencies.matrix-sdk]
version = "0.7.1"
default-features = false
features = ["rustls-tls", "experimental-sliding-sync"]
