[package]
name = "bouncer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "*"
tokio = { version = "1", features = [ "full" ] }
axum = { version = "0.7.7", features = ["macros"] }
serde = { version = "1.0.210", features = ["derive"] }
minijinja = "2.3.1"
reqwest = { version = "0.12.8", features = ["json", "rustls-tls-webpki-roots"], default-features = false }
clap = { version = "4.5.20", features = ["derive", "env"] }

[dependencies.matrix-sdk]
version = "0.7.1"
default-features = false
features = ["rustls-tls", "experimental-sliding-sync"]
